--- a/css/zcpixiu/zcpixiu.css
+++ b/css/zcpixiu/zcpixiu.css
@@ -11,6 +11,46 @@
 .content{
 	background-image:url(../../images/zcpixiu/21651651.jpg);  /* 大背景图 */
 }
+.content-box{
+	max-width: 1200px;
+	margin: 0 auto;
+}
+.section-cp-big{                                /*   大产品图文字居中   */
+	text-align: center;
+}
+ .section-cp-big img{
+ 	width: 400px;                            /*   大产品图片大小   */
+ 	height: 460px;
+ }
+.section-cp-box-big{  
+    width: 400px;                          /*   大产品底部文字背景图   */
+	height: 100px;
+	background-image:url(../../images/zcpixiu/1665156156.jpg);
+	background-repeat:no-repeat;
+}
+.section-cp-box-big a{                           /*   大产品a标签   */
+	line-height: 50px;
+	color: #f0e1a4;
+	font-family: "Microsoft YaHei";
+}
+.section-cp-box{                                 /* 每个产品宽度 */
+	width: 385px;
+	float: right;
+	padding: 5px;
+}
+.section-cp-box-jg{                              /* 每个产品价格背景图 */
+	width: 385px;
+	height: 100px;
+	background-image:url(../../images/zcpixiu/15615611.jpg);
+	background-repeat:no-repeat;
+	text-align: center;
+}
+.section-cp-box-jg a{    
+    width:248px;                                    /* 每个产品价格文字 */
+	color: #f0e1a4;
+	font-family: "Microsoft YaHei ";
+	line-height: 50px;
+}
 .section-2{
 	height: 922px;
 	background-image:url(../../images/zcpixiu/15615651.jpg);
@@ -18,10 +58,13 @@
     background-position:center;
 }
 .section-3{
-	height: 1523px;
-	background-image:url(../../images/zcpixiu/156165156.png);
+	height: 1520px;
+}
+.section-3-top{
+ 	height: 235px;
+	background-image:url(../../images/zcpixiu/1561651651.png);
 	background-repeat:no-repeat;
-    background-position:center;
+    background-position:center;	   
 }
 .section-4{
 	height: 1506px;
