--- a/css/index.css
+++ b/css/index.css
@@ -53,6 +53,10 @@
 	float: left;
 	padding: 5px;
 }
+.section-cp-box img{
+	width: 290px;
+	height: 290px;
+}
 .section-cp-box-jg{                              /* 每个产品价格背景图 */
 	height: 80px;
     text-align: center;
