--- a/css/zcpixiu/zcpixiu.css
+++ b/css/zcpixiu/zcpixiu.css
@@ -38,6 +38,10 @@
 	float: right;
 	padding: 5px;
 }
+.section-cp-box img{
+	width: 385px;
+	height: 265px;
+}
 .section-cp-box-jg{                              /* 每个产品价格背景图 */
 	width: 385px;
 	height: 100px;
